--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
     </header>
     <main>
       <!---main slogan-->
+      <section>
       <h1>Effective Solutions for Your Business</h1>
 
       <!--button-->
       <button type="button">Order Service</button>
-
+      </section>
+      
+      <section>
       <!--strategy-->
       <h3>Strategy</h3>
       <p>
@@ -59,7 +62,9 @@
         Design practice focused on digital experiences. We bring forth a deep
         passion for problem-solving.
       </p>
-
+    </section>
+    
+    <section>
       <!--team-->
       <h1>Our Team</h1>
 
@@ -108,6 +113,7 @@
           <p>UI Designer</p>
         </li>
       </ul>
+    </section>
     </main>
 
     <footer>
