--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <!---logo-->
-      <a href="" target="_blank"> web studio</a>
+      <a href="./index.html" target="_blank">WebStudio</a>
 
       <!--navigation-->
       <nav>
@@ -21,10 +21,12 @@
       </nav>
 
       <!--contacts-->
+      <address>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
+    </address>
     </header>
     <main>
       <!---main slogan-->
