--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <!---logo-->
-      <a href="./index.html" target="_blank">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
 
       <!--navigation-->
       <nav>
@@ -39,34 +39,35 @@
       
       <section>
       <!--strategy-->
-      <h3>Strategy</h3>
-      <p>
+      <ul>
+      <li>Strategy</li>
+      <li>
         Our goal is to identify the business problem to walk away with the
         perfect and creative solution.
-      </p>
-
+      </li>
+      </ul>
       <!--punctuality-->
-      <h3>Punctuality</h3>
+      <h2>Punctuality</h2>
       <p>
         Bring the key message to the brand's audience for the best price within
         the shortest possible time.
       </p>
 
-      <h3>diligence</h3>
+      <h2>diligence</h2>
       <p>
         Research and confirm brands that present the strongest digital growth
         opportunities and minimize risk.
       </p>
 
       <!--technologies-->
-      <h3>Technologies</h3>
+      <h2>Technologies</h2>
       <p>
         Design practice focused on digital experiences. We bring forth a deep
         passion for problem-solving.
       </p>
-    </section>
+      </section>
     
-    <section>
+      <section>
       <!--team-->
       <h1>Our Team</h1>
 
@@ -115,12 +116,12 @@
           <p>UI Designer</p>
         </li>
       </ul>
-    </section>
+      </section>
     </main>
 
     <footer>
       <!---logo-->
-      <a href="" target="_blank"> web studio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
