--- a/index.html
+++ b/index.html
@@ -47,24 +47,30 @@
       </li>
       </ul>
       <!--punctuality-->
-      <h2>Punctuality</h2>
-      <p>
+      <ul>
+        <li>Punctuality</li>
+        <li>
         Bring the key message to the brand's audience for the best price within
         the shortest possible time.
-      </p>
-
-      <h2>diligence</h2>
-      <p>
+        </li>
+      </ul>
+      <!--diligence-->
+      <ul>
+      <li>Diligence</li>
+        <li>
         Research and confirm brands that present the strongest digital growth
         opportunities and minimize risk.
-      </p>
+        </li>
+      </ul>
 
       <!--technologies-->
-      <h2>Technologies</h2>
-      <p>
+      <ul>
+      <li>Technologies</li>
+      <li>
         Design practice focused on digital experiences. We bring forth a deep
         passion for problem-solving.
-      </p>
+      </li>
+      </ul>
       </section>
     
       <section>
