--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 
       <!--navigation-->
       <nav>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
+        <a href="">Studio</a>
+        <a href="">Portfolio</a>
+        <a href="">Contacts</a>
       </nav>
 
       <!--contacts-->
@@ -38,6 +36,7 @@
       </section>
       
       <section>
+      <!--<h2>Our capabilities</h2>-->
       <!--strategy-->
       <ul>
       <li>Strategy</li>
@@ -75,7 +74,7 @@
     
       <section>
       <!--team-->
-      <h1>Our Team</h1>
+      <h2>Our Team</h2>
 
       <!--team cards-->
 
