--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
       <!--navigation-->
       <nav>
-        <a href="">Studio</a>
-        <a href="">Portfolio</a>
-        <a href="">Contacts</a>
+        <ul>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
       </nav>
 
       <!--contacts-->
