--- a/index.html
+++ b/index.html
@@ -22,107 +22,96 @@
 
       <!--contacts-->
       <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
-    </address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!---main slogan-->
       <section>
-      <h1>Effective Solutions for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
 
-      <!--button-->
-      <button type="button">Order Service</button>
+        <!--button-->
+        <button type="button">Order Service</button>
       </section>
-      
-      <section>
-      <!--<h2>Our capabilities</h2>-->
-      <!--strategy-->
-      <ul>
-      <li>Strategy</li>
-      <li>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </li>
-      </ul>
-      <!--punctuality-->
-      <ul>
-        <li>Punctuality</li>
-        <li>
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-        </li>
-      </ul>
-      <!--diligence-->
-      <ul>
-      <li>Diligence</li>
-        <li>
-        Research and confirm brands that present the strongest digital growth
-        opportunities and minimize risk.
-        </li>
-      </ul>
 
-      <!--technologies-->
-      <ul>
-      <li>Technologies</li>
-      <li>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-      </li>
-      </ul>
+      <section>
+        <h2>Our capabilities</h2>
+        <!--strategy-->
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+
+          <!--punctuality-->
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <!--diligence-->
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+
+          <!--technologies-->
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
-    
+
       <section>
-      <!--team-->
-      <h2>Our Team</h2>
+        <!--team-->
+        <h2>Our Team</h2>
 
-      <!--team cards-->
+        <!--team cards-->
 
-      <!--mark-->
-      <ul>
-        <li><img src="images/mark.jpg" alt="mark photo" width="264" /></li>
-        <li>
-          <h3>Mark Guerrero</h3>
-        </li>
-        <li>
-          <p>Product Designer</p>
-        </li>
-      </ul>
+        <!--mark-->
+        <ul>
+          <li>
+            <img src="images/mark.jpg" alt="mark photo" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
 
-      <!--tom-->
-      <ul>
-        <li><img src="images/tom.jpg" alt="toms photo" width="264" /></li>
-        <li>
-          <h3>Tom Ford</h3>
-        </li>
-        <li>
-          <p>Frontend Developer</p>
-        </li>
-      </ul>
+          <!--tom-->
+          <li>
+            <img src="images/tom.jpg" alt="toms photo" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
 
-      <!--camila-->
-      <ul>
-        <li><img src="images/camila.jpg" alt="camilas photo" width="264" /></li>
-        <li>
-          <h3>Camila Garcia</h3>
-        </li>
-        <li>
-          <p>Marketing</p>
-        </li>
-      </ul>
+          <!--camila-->
+          <li>
+            <img src="images/camila.jpg" alt="camilas photo" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
 
-      <!--daniel-->
-      <ul>
-        <li><img src="images/daniel.jpg" alt="daniels photo" width="264" /></li>
-        <li>
-          <h3>Daniel Wilson</h3>
-        </li>
-        <li>
-          <p>UI Designer</p>
-        </li>
-      </ul>
+          <!--daniel-->
+          <li>
+            <img src="images/daniel.jpg" alt="daniels photo" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
 
