--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <body>
     <header>
-      <!---logo-->
-      <a href="./index.html">WebStudio</a>
-
       <!--navigation-->
       <nav>
+        <!---logo-->
+        <a href="./index.html">WebStudio</a>
+
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -86,28 +86,28 @@
         <!--mark-->
         <ul>
           <li>
-            <img src="images/mark.jpg" alt="mark photo" width="264" />
+            <img src="./images/mark.jpg" alt="mark photo" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <!--tom-->
           <li>
-            <img src="images/tom.jpg" alt="toms photo" width="264" />
+            <img src="./images/tom.jpg" alt="toms photo" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <!--camila-->
           <li>
-            <img src="images/camila.jpg" alt="camilas photo" width="264" />
+            <img src="./images/camila.jpg" alt="camilas photo" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <!--daniel-->
           <li>
-            <img src="images/daniel.jpg" alt="daniels photo" width="264" />
+            <img src="./images/daniel.jpg" alt="daniels photo" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
